# WorldEditBE

./: .gitignore  CMakeLists.txt  README.md
api/: BDSMod.cpp  BDSMod.h  trapdoor.h
api/block/: Block.cpp  Block.h  BlockLegacy.cpp  BlockLegacy.h  BlockSource.cpp  BlockSource.h  CircuitComponent.cpp  CircuitComponent.h  VanillaBlockType.cpp  VanillaBlockType.h
api/commands/: ArgHolder.cpp  ArgHolder.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  CommandNode.cpp  CommandNode.h
api/entity/: Actor.cpp  Actor.h  Item.cpp  Item.h  PlayerBuffer.cpp  PlayerBuffer.h  PlayerInventory.cpp  PlayerInventory.h
api/graphics/: AABB.h  BlockPos.cpp  BlockPos.h  Graphics.cpp  Graphics.h  Particle.cpp  Particle.h  Vec3.cpp  Vec3.h
api/lib/: SymHook.h  detours.h  detver.h  mod.h
api/tools/: CppEval.h  DirtyLogger.cpp  DirtyLogger.h  Message.cpp  Message.h  MsgBuilder.cpp  MsgBuilder.h  StringTool.h  ThreadPool.h  noncopyable .h
api/world/: Biome.cpp  Biome.h  Dimension.cpp  Dimension.h  Level.cpp  Level.h
mod/: Init.cpp  WorldEditMod.cpp  WorldEditMod.h  dllmain.cpp
mod/eval/: Eval.cpp  Eval.h
mod/player/: Player.cpp  Player.h  SimpleBuilder.cpp  SimpleBuilder.h
mod/region/: ConvexRegion.cpp  ConvexRegion.h  CuboidRegion.cpp  CuboidRegion.h  ExpandRegion.cpp  ExpandRegion.h  PolyRegion.cpp  PolyRegion.h  Region.cpp  Region.h  Regions.h  SphereRegion.cpp  SphereRegion.h
mod/tick/: GameTick.cpp  GameTick.h
